# vehicle-detection-using-yolo

./: .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  vehicle_detector.py
vehicle_detection/: __init__.py  detector.py  gui.py
