[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-detection-yolo"
version = "0.1.0"
description = "Vehicle detection using YOLOv8, runnable globally."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ultralytics>=8.2.0",
    "opencv-python-headless>=4.9.0",
    "streamlit>=1.35.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
vehicle-detect = "vehicle_detection.detector:main"
vehicle-detect-ui = "vehicle_detection.gui:run_app"

[tool.setuptools]
packages = ["vehicle_detection"]

[tool.setuptools.package-data]
vehicle_detection = ["*.pt"]
